# home_work_5

./: .env.example  README.md  mylog.txt  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  read_csv_file.py  read_excel_file.py  search_operation.py  utils.py  widget.py
tests/: test_decorators_log.py  test_external_api.py  test_generators_card_number_generator.py  test_generators_filter_by_currency.py  test_generators_transaction_descriptions.py  test_masks_get_mask_account.py  test_masks_get_mask_card_number.py  test_processing_filter_by_state.py  test_processing_sort_by_date.py  test_read_csv_file.py  test_read_excel_file.py  test_utils.py  test_widget_get_date.py  test_widget_mask_account_card.py
